Sistema de upload e remoção de imagens 99% completo
O sistema de upload está quase completo, só falta uns refinamentos e ajustes

--- a/prototipos/front/CSS/stylesTest.css
+++ b/prototipos/front/CSS/stylesTest.css
@@ -6,3 +6,21 @@
 .imagemPagina {
     width: 75%;
 }
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-button {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: large;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer;
+    background-color: #198754;
+    color: white;
+    transition: background 300ms;
+}
+.hover {
+    background-color: #157347;
+}
