--- a/CSS/style_texto_voz.css
+++ b/CSS/style_texto_voz.css
@@ -15,20 +15,18 @@
     border-radius: 5px;
     padding: 5px;
     font-size: 24px;
-    color: white !important; 
+    color: rgb(255, 255, 255) !important; 
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center; 
     transition: background-color 0.3s;
-    width: 40px; 
-    height: 40px;
+    width: 42px; 
+    height: 42px;
 }
 
 .btn i {
-    font-family: 'Font Awesome 6 Free' !important; 
-    font-weight: 900; 
-    font-size: 24px;  
+    font-size: 16px; 
 }
 
 .btn:hover {
