--- a/telas_ofc/styles/oficinas-2.css
+++ b/telas_ofc/styles/oficinas-2.css
@@ -8,13 +8,14 @@ body{
   color: black;
 
 }
-.row_descricao{
-background-color: #F6CC3A !important;
+/* .row_descricao{
+background-color: #3E4096 !important;
 
-}
+} */
 .texto_descricao{
 font-family: 'Ubuntu', sans-serif !important;
 font-size: 1.2rem;
+color: black !important;
 }
 
 /* cards */
@@ -45,6 +46,34 @@ font-size: 1.2rem;
       color: black!important;
       margin: 20px!important;
 
+  }
+
+    /* scalop */
+  /*----------------*/
+/*  SCALLOP down  */
+/*----------------*/
+.scallop-down{
+    height:100px;
+    width:100%;
+    background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#8DA5ED), color-stop(0.49, #8DA5ED), color-stop(0.51, #3E4096), to(#8DA5ED));
+  -webkit-background-size: 49px 100%;
+  }
+  
+  .white-block{
+    background-color: #8DA5ED;
+  }
+  .white-block p{
+    margin: 0 !important;
+  }
+  
+  /*----------------*/
+  /*  SCALLOP up    */
+  /*----------------*/
+  .scallop-up{
+    height:100px;
+    width:100%;
+    background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#8DA5ED), color-stop(0.49, #8DA5ED), color-stop(0.51, #3E4096), to(#8DA5ED));
+  -webkit-background-size: 49px 100%;
   }
   /* .card-body{
       align-self: center !important;
