--- a/telas_ofc/styles/tutorial.css
+++ b/telas_ofc/styles/tutorial.css
@@ -4,8 +4,10 @@ body{
 }
 
 #logo2 {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 h1 {
