--- a/telas_ofc/styles/adicionar_img.css
+++ b/telas_ofc/styles/adicionar_img.css
@@ -4,8 +4,10 @@ body {
 }
 
 #logo2 {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 h1 {
@@ -28,10 +30,37 @@ h1 {
 
 .add-image-button {
     background-color: #FFD700;
-    /* Yellow color */
     color: #000000;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.back-button {
+    position: absolute;
+    top: 150px; 
+    left: 10px; 
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: transform 0.2 ease-in-out;
+}
+
+.back-button span {
+    display: inline-block;
+    transform: rotate(180deg); /* virar a seta */
+}
+
+.back-button:hover {
+    transform: scale(1.2); /* Aumenta 20% o tamanho */
 }
