--- a/telas_ofc/styles/dados_estatisticos.css
+++ b/telas_ofc/styles/dados_estatisticos.css
@@ -4,8 +4,10 @@ body {
 }
 
 #logo2 {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 h1 {
@@ -45,4 +47,32 @@ th {
     color: rgb(0, 0, 0);
     border: 1px solid black !important;
     
+}
+
+.back-button {
+    position: absolute;
+    top: 150px; 
+    left: 10px; 
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: transform 0.2 ease-in-out;
+}
+
+.back-button span {
+    display: inline-block;
+    transform: rotate(180deg); /* virar a seta */
+}
+
+.back-button:hover {
+    transform: scale(1.2); /* Aumenta 20% o tamanho */
 }
