--- a/telas_ofc/styles/tutorial.css
+++ b/telas_ofc/styles/tutorial.css
@@ -13,3 +13,31 @@ body{
 h1 {
     font-family:"Luckiest Guy", sans-serif;
 }
+
+.back-button {
+    position: absolute;
+    top: 150px; 
+    left: 10px; 
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: transform 0.2 ease-in-out;
+}
+
+.back-button span {
+    display: inline-block;
+    transform: rotate(180deg); /* virar a seta */
+}
+
+.back-button:hover {
+    transform: scale(1.2); /* Aumenta 20% o tamanho */
+}
