--- a/telas_finais/css/tela_admin.css
+++ b/telas_finais/css/tela_admin.css
@@ -1,25 +1,47 @@
 body{
     background-color: #8DA5ED !important;
 }
-
-
-.texto_modoA{
-    font-family: 'Ubuntu', sans-serif !important;
-    font-size: 2.5rem;
+.logo_header{
+    width: 150px;
+    margin: 40px;
+    max-width: 100%;
+    max-height: 100%;
+}
+.col_texto{
+    background-color: white;
+    border-radius: 20px;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
 }
 .texto_bemV{
+    font-family:"Luckiest Guy", sans-serif;
+    font-size: 3.2rem;
+    margin-bottom: 50px !important;
+
+
+}
+.texto_modoA{
     font-family: 'Ubuntu', sans-serif !important;
-    font-size: 3rem;
-    margin: 50px !important;
+    font-size: 1.5rem;
+    margin-top: 50px !important;
+    font-style: italic;
 
 }
 
+.texto_intro{
+    font-family: 'Ubuntu', sans-serif !important;
+    font-size: 1.5rem;
+    margin-bottom:  50px !important;
+    font-style: italic;
 
 
+}
+b{
+    color: #20229b;
+}
 .col_card3, .col_card2, .col_card1{
     margin: 0 !important;
     padding: 5rem;
-    align-items: stretch !important;
 }
 
 .botao{
@@ -31,4 +53,18 @@ body{
     font-weight: bold !important;
     font-size: 1.5rem !important;
     text-align: center !important;
+    height: 100%;
+    width: auto;
+    border-radius: 20px !important;
 }
+
+@media (max-width: 768px) { 
+    .col_texto{
+        border-radius: 0px;
+    }
+    .col_card3, .col_card2, .col_card1{
+        margin: 0 !important;
+        padding: 2rem;
+        
+    }
+ }
