--- a/telas_finais/css/tutorial.css
+++ b/telas_finais/css/tutorial.css
@@ -1,18 +1,48 @@
 body{
-    /* background: rgb(141,165,237);
-    background: linear-gradient(0deg, rgba(141,165,237,1) 0%, rgba(251,212,69,1) 100%); */
     background-color: #8DA5ED !important;
-
     font-family:"Luckiest Guy", sans-serif;
 }
+.tutorial{
+    margin-top: 70px !important;
+}
 
-.logo_passatempo {
-    width: 150px;
+#logo2 {
+    width: 12vw;
     height: auto;
     max-width: 100%;
     max-height: 100%;
 }
 
-h1 {
+.titulo{
     font-family:"Luckiest Guy", sans-serif;
+    color: black !important;
+    font-size: 4vw;
+}
+
+.back-button {
+    position: absolute;
+    top: 150px; 
+    left: 5%; 
+    width: 3rem;
+    height: 3rem;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: transform 0.2 ease-in-out;
+}
+
+.back-button span {
+    display: inline-block;
+    transform: rotate(180deg); /* virar a seta */
+}
+
+.back-button:hover {
+    transform: scale(1.2); /* Aumenta 20% o tamanho */
 }
