--- a/telas_finais/css/tela_admin.css
+++ b/telas_finais/css/tela_admin.css
@@ -17,6 +17,7 @@ body{
     font-family:"Luckiest Guy", sans-serif;
     font-size: 3.2rem;
     margin-bottom: 50px !important;
+    color: black;
 
 
 }
@@ -25,6 +26,9 @@ body{
     font-size: 1.5rem;
     margin-top: 50px !important;
     font-style: italic;
+    color: black;
+    
+
 
 }
 
@@ -38,6 +42,8 @@ body{
 }
 b{
     color: #20229b;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #082a8f;
 }
 .col_card3, .col_card2, .col_card1{
     margin: 0 !important;
@@ -56,6 +62,18 @@ b{
     height: 100%;
     width: auto;
     border-radius: 20px !important;
+    -webkit-text-stroke-width: 0.8px;
+    -webkit-text-stroke-color: #082a8f;
+}
+
+.botao:hover{
+    /* transform: scale(1.1);  */
+    /* box-shadow: 0px 0px 15px 8px rgba(0,0,0,0.1); */
+        /* box-shadow: 0px 0px 22px 4px #117; */
+        /* box-shadow: 0px 0px 15px 8px #fff; */
+        box-shadow: 0px 0px 25px -3px #117;
+        
+
 }
 
 @media (max-width: 768px) { 
