--- a/telas_finais/css/add_img.css
+++ b/telas_finais/css/add_img.css
@@ -44,7 +44,7 @@ body {
 .back-button {
     position: absolute;
     top: 150px; 
-    left: 10px; 
+    left: 5%; 
     width: 50px;
     height: 50px;
     background-color: black;
