--- a/telas_finais/css/consulta_dados.css
+++ b/telas_finais/css/consulta_dados.css
@@ -53,7 +53,7 @@ th {
 .back-button {
     position: absolute;
     top: 150px; 
-    left: 10px; 
+    left: 5%; 
     width: 50px;
     height: 50px;
     background-color: black;
