ajuste css oficinas

--- a/telas_ofc/styles/oficinas-2.css
+++ b/telas_ofc/styles/oficinas-2.css
@@ -31,7 +31,9 @@ color: black !important;
   border-radius: 20px!important;
   }
   div .card{
-      height: 50rem !important;
+      /* height: 50rem !important; */
+      height: 100% !important;
+
   }
   .card-title{
       font-family:"Luckiest Guy", sans-serif!important;
