--- a/telas_finais/css/home.css
+++ b/telas_finais/css/home.css
@@ -10,147 +10,6 @@ body{
 } */
 
 
-/* dividers */
-.h-divider {
-    margin: auto;
-    margin-top: 80px;
-    width: 40% !important;
-    position: relative;
-  }
-  
-  .h-divider .shadow {
-    overflow: hidden;
-    height: 5px;
-  }
-  
-  .h-divider .shadow:after {
-    content: '';
-    display: block;
-    margin: -25px auto 0;
-    width: 100%;
-    height: 25px;
-    border-radius: 125px/12px;
-    box-shadow: 8px 8px 8px #F6CC3A;
-  }
-  
-  
-  .h-divider .text2 {
-    width: 70px;
-    height: 70px;
-    position: absolute;
-    bottom: 100%;
-    margin-bottom: -35px;
-    left: 50%;
-    margin-left: -25px;
-    border-radius: 100%;
-  }
-  
-  .h-divider img {
-    position: absolute;
-    margin: 4px;
-    max-width: 100px;
-    border-radius: 100%;
-    left: -30%;
-    top: -20%;
-
-  }
-
-
-  /* scalop */
-  /*----------------*/
-/*  SCALLOP down  */
-/*----------------*/
-.scallop-down{
-    height:100px;
-    width:100%;
-    background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#8DA5ED), color-stop(0.49, #8DA5ED), color-stop(0.51, #3E4096), to(#8DA5ED));
-  -webkit-background-size: 49px 100%;
-  }
-  
-  .white-block{
-    background-color: #6787E7;
-  }
-  .white-block p{
-    margin: 0 !important;
-  }
-  
-  /*----------------*/
-  /*  SCALLOP up    */
-  /*----------------*/
-  .scallop-up{
-    height:100px;
-    width:100%;
-    background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#8DA5ED), color-stop(0.49, #8DA5ED), color-stop(0.51, #3E4096), to(#8DA5ED));
-  -webkit-background-size: 49px 100%;
-  }
-
-  .fancy {
-    --b: 6px;   /* control the border thickness */
-    --w: 80px;  /* control the width of the line*/
-    --g: 15px;  /* control the gap */
-    --c: #3E4096;
-   
-    width: fit-content;
-    padding: 0 1em;
-    line-height: 1.6em;
-    border: 1px solid;
-    color: #fff;
-    background: 
-      conic-gradient(from   45deg at left ,var(--c) 25%,#0000 0) 0,
-      conic-gradient(from -135deg at right,var(--c) 25%,#0000 0) 100%;
-    background-size: 51% 100%;
-    background-origin: border-box;
-    background-repeat: no-repeat;
-    border-image: 
-       linear-gradient(
-         #0000      calc(50% - var(--b)/2),
-         var(--c) 0 calc(50% + var(--b)/2),
-         #0000    0) 
-      1/0 var(--w)/calc(var(--w) + var(--g));
-    margin-inline: auto;
-  }
-  
-
-  /* cabecalho dividers */
-
-
-/* .triangle {
-    position: relative;
-    background: #8DA5ED;
-    height: 25vh;
-  }
-  
-  .triangle::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 0;
-    height:0;
-    border-style: solid;
-    border-width: 100px 100px 0 100px;
-    border-color: #8DA5ED transparent transparent transparent;
-    left: 50%;
-    transform: translateX(-50%) translateY(100%);
-  } */
-
-  .triangle {
-    position: relative;
-    background: #8DA5ED ;
-    height: 2vh;
-  }
-  
-  .triangle::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 45px 45px 0 45px;
-    border-color: #8DA5ED  transparent transparent transparent;
-    left: 21%;
-    transform: translateX(-50%) translateY(100%);
-  }
 
 .row_cabecalho {
     /* background-color: #6787E7; */
@@ -328,4 +187,29 @@ body{
 }
 
 
+
+.card-title{
+    font-family: "Luckiest Guy", sans-serif !important;
+    font-size: 30px !important;
+
+}
+
+.card{
+    height: 100% !important;
+    border-radius: 20px !important;
+    padding: 20px !important;
+    background-color: white!important;
+    color: black !important;
+    box-shadow: 0px 0px 25px -3px #117;
+}
+
+.card-header{
+    height: 100% !important;
+    color: #3E4096 !important;
+}
+
+.btn-secondary{
+    background-color: #3E4096 !important;
+    color: white !important;
+}
 
