--- a/telas_finais/css/navbar.css
+++ b/telas_finais/css/navbar.css
@@ -5,7 +5,7 @@
 }
 /* Estilos para a barra de navegação */
 .navbar {
-    background-color: #fbd445; /* Cor de fundo */
+    background-color:aliceblue; /* Cor de fundo */
     padding: 0;
     font-family:"Luckiest Guy", sans-serif;
 }
