--- a/telas_finais/css/home.css
+++ b/telas_finais/css/home.css
@@ -41,9 +41,9 @@ body{
 .botao_carrossel{
     margin: 10px !important;
     font-family: 'Ubuntu', sans-serif !important;
-    font-size: 1.2vw !important;
+    font-size: 1.3vw !important;
     padding: 10px !important;
-
+    color: #2d2e7e !important;
 }
 
 
@@ -87,7 +87,7 @@ body{
     }
     #texto3{
         font-family: 'Ubuntu', sans-serif !important;
-        font-size: 15px;
+        font-size: 18px;
         padding: 0!important;
         margin: 20px !important;
     }
@@ -97,7 +97,7 @@ body{
     .botao_carrossel{
         margin: 25px !important;
         font-family: 'Ubuntu', sans-serif !important;
-        font-size: 15px !important;
+        font-size: 18px !important;
     }
 }
 
