--- a/telas_finais/css/oficinas.css
+++ b/telas_finais/css/oficinas.css
@@ -17,8 +17,10 @@ body{
   font-family: 'Ubuntu', sans-serif !important;
   font-size: 1.2rem;
   color: black !important;
+  font-weight: 400;
+
   }
-  .img_descricao{
+  /* .img_descricao{
     max-width: 100% !important; 
     max-height: 100% !important; 
     height: auto !important; 
@@ -28,92 +30,103 @@ body{
     object-fit: cover !important;
     padding: 0 !important;
   }
-  /* cards */
-  /* .carousel-inner {
-    padding: 5px!important;
-    } */
-    .card {
-    margin: 0 0.5em!important;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18)!important;
-    border: none!important;
-    background-color: #3E4096 !important;
-    text-align: center!important;
-    border-radius: 20px!important;
-    }
-    div .card{
-        height: 100% !important;
+   */
+
+.card-img{
+    border-radius: 0 !important;
+    
+}
+   .slide-container{
+    max-width: 1120px;
+    width: 100%;
+    padding: 40px 0;
+  }
+  .slide-content{
+    margin: 0 40px;
+    overflow: hidden;
+  }
+  .card{
+    background-color: #FFF;
+  }
+  .image-content,
+  .card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
+  }
+  .image-content{
+    position: relative;
+    row-gap: 5px;
+    padding: 0;
+  }
+
+  .card-image{
+    position: relative;
+    height: 250px !important;
+    width: 100% !important;
+  }
+  .card-image .card-img{
+    height: 100% !important;
+    width: 100% !important;
+    object-fit: cover !important;
+
+  }
+  .name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+  }
+  .description{
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
+  }
+  .button{
+    border: none;
+    font-size: 16px;
+    color: #FFF;
+    padding: 8px 16px;
+    background-color: #4070F4;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .button:hover{
+    background: #265DF2;
+  }
   
-    }
-    .card-title{
-        font-family:"Luckiest Guy", sans-serif!important;
-        font-size: 2.2rem!important;
-        color: white !important;
-        margin: 10px!important;
+  .swiper-navBtn{
+    color: #6E93f7;
+    transition: color 0.3s ease;
+  }
+  .swiper-navBtn:hover{
+    color: #4070F4;
+  }
+  .swiper-navBtn::before,
+  .swiper-navBtn::after{
+    font-size: 35px;
+  }
+  .swiper-button-next{
+    right: 0;
+  }
+  .swiper-button-prev{
+    left: 0;
+  }
+  .swiper-pagination-bullet{
+    background-color: #6E93f7;
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: #4070F4;
+  }
   
+  @media screen and (max-width: 768px) {
+    .slide-content{
+      margin: 0 10px;
     }
-    .card-text{
-        font-family: 'Ubuntu', sans-serif !important;
-        font-size: 1.2rem!important;
-        color: white !important;
-        margin: 20px!important;
-  
+    .swiper-navBtn{
+      display: none;
     }
-  
-  
-    /* .card-body{
-        align-self: center !important;
-        max-width: 100%; 
-        max-height: 100%; 
-        height: auto; 
-        width: auto;
-    } */
-      .carousel-control-prev,
-      .carousel-control-next {
-      background-color: #3E4096!important;
-      width: 6vh!important;
-      height: 6vh!important;
-      border-radius: 30px!important;
-      top: 50%!important;
-      transform: translateY(-50%)!important;
-      }
-  
-  
-    /* .carousel-item{
-  
-        width: 100% !important;
-    } */
-  
-    @media (min-width: 992px) {
-    .carousel-item {
-        margin-right: 0!important;
-        flex: 0 0 33.333333%!important;
-        display: block!important;
-    }
-    .carousel-inner {
-        display: flex!important;
-    }
-    }
-  
-    .card .img-wrapper {
-        max-width: 100%!important;
-        height: 20em!important;
-        display: flex!important;
-        justify-content: center!important;
-        align-items: center !important;
-        padding: 10px !important;
-    }
-    .img-wrapper img{
-        border-radius: 10px!important;
-        max-width: 100% !important; 
-        max-height: 100% !important; 
-        height: auto !important; 
-        width: auto !important;       
-    }
-    .card img {
-        max-height: 100% !important;
-    }
-    @media (max-width: 767px) {
-    .card .img-wrapper {
-        height: 17em !important;
-    }
-    }
+  }
