--- a/telas_finais/css/saude.css
+++ b/telas_finais/css/saude.css
@@ -1,9 +1,21 @@
-#imagem1{
-    width: 500px;
-    height: 370px;
+#imagem0 {
+    width: 1500px;
+    height: auto;
     max-width: 100%;
     max-height: 100%;
-}
+    object-fit: cover;
+    image-rendering: optimizeQuality;
+} 
+
+#imagem1 {
+    width: 1500px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    image-rendering: optimizeQuality;
+
+} 
 
 .brilho{
     height: 150px;
@@ -36,3 +48,104 @@ body{
     background-color: #FFBD57  !important;
 }
 
+#purp_azul {
+    width: 150px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 400px;
+    right: 20px;
+
+}
+
+#purp_laranja {
+    width: 150px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 400px;
+    right: 700px;
+
+}
+
+#purp_amarela {
+    width: 100px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 610px;
+    right: 1000px;
+
+}
+
+#purp_laranja2 {
+    width: 150px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 1180px;
+    right: 100px;
+
+}
+
+#purp_azul2 {
+    width: 110px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 1190px;
+    right: 750px;
+
+}
+
+
+#purp_amarela2 {
+    width: 100px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 1500px;
+    right: 1000px;
+
+}
+
+#purp_azul3 {
+    width: 80px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 2000px;
+    right: 200px;
+
+
+}
+
+#purp_laranja3 {
+    width: 80px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 1850px;
+    right: 980px;
+
+}
+
+#purp_amarela3 {
+    width: 90px;
+    height: auto;
+    z-index: 10;
+    overflow: visible;
+    position: absolute;
+    top: 1100px;
+    right: 10px;
+
+
+} 
