--- a/telas_finais/css/home.css
+++ b/telas_finais/css/home.css
@@ -15,17 +15,21 @@ body{
 }
 .col_carrossel{
     padding: 0 !important;
+    height: auto !important;
+
 }
-.img_carrossel{
-    width: 200px !important;
-    height: auto;
-    max-width: 100%;
-    max-height: 100% ;
+
+img.img_carrossel{
+    height: 100% !important;
+    max-height:600px !important; 
+    object-fit: cover !important;
 }
+
 
 .col_texto_carrossel{
     padding: 0px !important;
 }
+
 #texto1, #texto2{
     font-size: 2.8vw;
     font-family: "Luckiest Guy", sans-serif;
@@ -98,6 +102,11 @@ body{
         margin: 25px !important;
         font-family: 'Ubuntu', sans-serif !important;
         font-size: 18px !important;
+    }
+    img.img_carrossel{
+        height: 100% !important;
+        max-height:500px !important; 
+        object-fit: cover !important;
     }
 }
 
