--- a/telas_finais/css/login.css
+++ b/telas_finais/css/login.css
@@ -1,6 +1,6 @@
 /* Cor de fundo da página */
 body {
-    background-color: #8DA5ED !important; /* Azul suave */
+    background-color: #FFBD57 !important; /* Azul suave */
     color: #373535; /* Cor do texto geral (preto escuro) */
   }
   
