--- a/telas_finais/css/eventos.css
+++ b/telas_finais/css/eventos.css
@@ -74,3 +74,19 @@ ul.caixa{
     padding: 2px;
 
 }
+
+th {
+    background-color: #000000 !important; /* Cor de fundo preta */
+    color: #FFFFFF; /* Cor do texto branca para boa legibilidade */
+    padding: 10px; /* Adiciona espaçamento interno para melhor aparência */
+    text-align: center; /* Centraliza o texto */
+    border: 5px solid #000000 !important; /* Adiciona uma borda preta para definir claramente a divisória */
+}
+
+
+.divisoria {
+    width: 100%;
+    height: 1px;
+    background: #000000; /* Cor preta */
+    margin: 20px 0; /* Espaçamento superior e inferior */
+}
