--- a/telas_finais/css/eventos.css
+++ b/telas_finais/css/eventos.css
@@ -39,11 +39,17 @@ ul.caixa{
     max-height: 100% !important; 
     height: auto !important; 
     width: 100px !important;
+    box-shadow: 0px 0px 15px -3px #117;
+
+
   }
 .col_imagem_descricao{
     object-fit: cover !important;
     padding: 0 !important;
 }
+
+
+
 
 
 .titulo_descricao{
@@ -86,6 +92,8 @@ a.botao_evento{
     color: white !important;
     width: 200px;
     font-size: 20px;
+    box-shadow: 0px 0px 15px -3px #117;
+
 }
 a.botao_evento:hover{
     background-color: #343579;
