--- a/telas_finais/css/home.css
+++ b/telas_finais/css/home.css
@@ -54,6 +54,8 @@ img.img_carrossel{
     font-size: 1.3vw !important;
     padding: 10px !important;
     color: #2d2e7e !important;
+    box-shadow: 0px 0px 15px -3px #117;
+
 }
 
 
@@ -141,6 +143,8 @@ img.img_carrossel{
     padding: 10px !important;
     word-spacing: 5px;
     font-size: 18px !important;
+    box-shadow: 0px 0px 15px -3px #117;
+
 }
 .card-header{
     height: 100% !important;
